<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="7.36dp"
    android:paddingRight="7.36dp"
    android:theme="@style/Theme.CasaCash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.CasaCash">

        <ImageButton
            android:id="@+id/ib_register_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:src="@drawable/logo_removebg_50"
            android:theme="@style/Theme.CasaCash" />

        <TextView
            android:id="@+id/tv_new_password_title"
            style="@style/Theme.CasaCash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textHeaderNewPassword"
            android:textAlignment="center"
            android:textAppearance="@style/textHeader"
            android:theme="@style/Theme.CasaCash"
            app:autoSizeTextType="none" />

        <ImageButton
            android:id="@+id/tb_register_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/icons8_menu_100___"
            android:theme="@style/Theme.CasaCash" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:paddingLeft="34.34dp"
        android:paddingRight="34.34dp"
        android:theme="@style/Theme.CasaCash">

        <TextView
            android:id="@+id/tv_new_password"
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textNewPassword"
            android:theme="@style/Theme.CasaCash" />

        <EditText
            android:id="@+id/et_new_password"
            style="@style/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            android:theme="@style/Theme.CasaCash" />

        <TextView
            android:id="@+id/tv_new_password_confirm_password"
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textNewPasswordConfirm"
            android:theme="@style/Theme.CasaCash" />

        <EditText
            android:id="@+id/et_new_password_confirm_password"
            style="@style/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            android:theme="@style/Theme.CasaCash" />

        <TextView
            android:id="@+id/tv_new_password_code_confirm"
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textCodeConfirm"
            android:theme="@style/Theme.CasaCash" />

        <EditText
            android:id="@+id/et_new_password_code_confirm"
            style="@style/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:theme="@style/Theme.CasaCash" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_new_password_code_send"
                style="@style/textInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onTextViewClick"
                android:text="@string/textCodeSend" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="43.54dp"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:theme="@style/Theme.CasaCash">

        <Button
            android:id="@+id/bt_register_sign_up"
            style="@style/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textButtonRegister"
            android:textAlignment="center"
            android:theme="@style/Theme.CasaCash" />
    </LinearLayout>

</LinearLayout>