<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="7.36dp"
    android:paddingRight="7.36dp"
    android:theme="@style/Theme.CasaCash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.CasaCash">

        <ImageButton
            android:id="@+id/ib_settings_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="goToMainMenu"
            android:background="#00000000"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:src="@drawable/logo_removebg_50"
            android:theme="@style/Theme.CasaCash" />

        <TextView
            android:id="@+id/tv_settings_title"
            style="@style/Theme.CasaCash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textHeaderConfiguration"
            android:textAlignment="center"
            android:textAppearance="@style/textHeader"
            android:theme="@style/Theme.CasaCash"
            app:autoSizeTextType="none" />

        <ImageButton
            android:id="@+id/tb_settings_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="goToSettings"
            android:background="#00000000"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/icons8_menu_100___"
            android:theme="@style/Theme.CasaCash" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_settings_change_password"
            style="@style/textButton"
            android:layout_width="271.26dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorFunction"
            android:text="@string/textButtonChangePassword"
            app:layout_constraintBottom_toTopOf="@+id/bt_settings_manage_family"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_settings_manage_family"
            style="@style/textButton"
            android:layout_width="271.26dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorFunction"
            android:text="@string/textButtonManageFamily"
            app:layout_constraintBottom_toTopOf="@+id/bt_settings_family_request"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_settings_change_password" />

        <Button
            android:id="@+id/bt_settings_family_request"
            style="@style/textButton"
            android:layout_width="271.26dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorFunction"
            android:text="@string/textButtonFamilyRequests"
            app:layout_constraintBottom_toTopOf="@+id/bt_settings_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_settings_manage_family" />

        <Button
            android:id="@+id/bt_settings_logout"
            style="@style/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="43.54dp"
            android:backgroundTint="@color/colorExit"
            android:text="@string/textButtonLogout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>