<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/textLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:layout_gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_spending_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSpendListTitle"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_item_spending_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- Amount Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_spending_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSpendListAmount"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_item_spending_amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- Date Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_spending_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSpendListDate"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_item_spending_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- User Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_spending_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSpendListUser"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_item_spending_user_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_item_spending_delete"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:src="@drawable/x_mark_512"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"/>

</LinearLayout>
